[package]
name = "core"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
z80 = { path = "../z80" }
bitflags = "2.4.1"
snafu = "0.7.5"
log = "0.4.20"
env_logger = "0.10.1"
mlua = { version = "0.9.1", features = ["lua54", "vendored"] }
lazy_static = "1.4.0"
num-traits = "0.2.18"

[dev-dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
datatest = "0.8.0"
