[package]
name = "emu"
version = "0.1.0"
edition = "2021"

[dependencies]
z80 = { path = "../z80" }
bitflags = "2.4.1"
snafu = "0.7.5"
log = "0.4.20"
env_logger = "0.10.1"
rlua = "0.19.7"
lazy_static = "1.4.0"

[dev-dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
datatest = "0.8.0"