[package]
name = "gg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emu = { path = "../emu" }
log = "0.4.20"
env_logger = "0.10.1"
raylib = { version = "4.5.0", git = "https://github.com/raylib-rs/raylib-rs", branch = "4.5.0" }
