[package]
name = "gg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emu = { path = "../emu" }
log = "0.4.20"
env_logger = "0.10.1"
eframe = "0.26.0"
z80 = { path = "../z80" }
clap = { version = "4.5.1", features = ["derive"] }
